--- a/public/assets_admin/css/style_rtl.css
+++ b/public/assets_admin/css/style_rtl.css
@@ -117,11 +117,11 @@ input:-webkit-autofill:focus {
     border-radius: .3125rem;
 }
 a {
-	color: #FF5B37;
+	color: #0f7997;
 	text-decoration: none;
 }
 a:hover {
-    color: #FF5B37;
+    color: #0f7997;
     text-decoration: none;
 }
 p {
@@ -214,8 +214,8 @@ p:last-child{
 }
 .custom-control-input:checked~.custom-control-label::before {
     color: #fff;
-    border-color: #FF5B37;
-    background-color: #FF5B37;
+    border-color: #0f7997;
+    background-color: #0f7997;
 
 }
 
@@ -230,10 +230,10 @@ p:last-child{
 }
 .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
     color: #fff;
-    background: #FF5B37;
+    background: #0f7997;
 }
 .nav-pills .nav-link {
-   color: #FF5B37;
+   color: #0f7997;
    border: 1px solid #FFE6E1;
    border-radius: 5px;
 }
@@ -243,7 +243,7 @@ p:last-child{
 }
 .projects-card .nav-pills .nav-link.active, .projects-card .nav-pills .show>.nav-link {
 	color: #fff;
-    background-color: #FF5B37;
+    background-color: #0f7997;
     font-weight: 500;
 }
 .projects-card .nav-pills .nav-link {
@@ -258,7 +258,7 @@ p:last-child{
 .table-btn {
 	width:205px;
 	font-size: 12px;
-	background: #ff5b37;
+	background: #0f7997;
 	color: #fff;
 }
 .table-btn:hover {
@@ -344,7 +344,7 @@ table.table td h2 a {
 	color: #333;
 }
 table.table td h2 a:hover {
-	color: #FF5B37;
+	color: #0f7997;
 }
 table.table td h2 span {
 	color: #888;
@@ -444,10 +444,10 @@ div.dataTables_wrapper div.dataTables_length select {
 	font-size: 22px;
 }
 .bg-1 {
-	background: #FFB8A8;
+	background: #21a8ce1f;
 }
 .bg-1 i {
-	color: #FF5B37;
+	color: #0f7997;
 
 }
 .bg-2 {
@@ -516,7 +516,7 @@ table .badge {
 }
 .bg-primary,
 .badge-primary {
-	background-color: #FF5B37 !important;
+	background-color: #0f7997 !important;
 }
 a.bg-primary:focus,
 a.bg-primary:hover,
@@ -573,7 +573,7 @@ button.bg-danger:hover {
 }
 .text-primary,
 .dropdown-menu > li > a.text-primary {
-	color: #FF5B37 !important;
+	color: #0f7997 !important;
 }
 .text-success,
 .dropdown-menu > li > a.text-success {
@@ -599,16 +599,16 @@ button.bg-danger:hover {
 	color: #757575 !important;
 }
 .btn-primary {
-	background-color: #FF5B37;
-	border: 1px solid #FF5B37;
+	background-color: #0f7997;
+	border: 1px solid #0f7997;
 }
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary.active,
 .btn-primary:active,
 .open > .dropdown-toggle.btn-primary {
-	background-color: #FF5b33;
-	border: 1px solid #FF5b33;
+	background-color: #0f7997;
+	border: 1px solid #0f7997;
 }
 .btn-primary.active.focus,
 .btn-primary.active:focus,
@@ -636,8 +636,8 @@ button.bg-danger:hover {
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
-	background-color: #FF5B37;
-	border-color: #FF5B37;
+	background-color: #0f7997;
+	border-color: #0f7997;
 	color: #fff;
 }
 .btn-secondary.active:focus:not(:disabled):not(.disabled),
@@ -828,12 +828,12 @@ button.bg-danger:hover {
 	box-shadow: unset;
 }
 .btn-outline-primary {
-	color: #FF5B37;
-	border-color: #FF5B37;
+	color: #0f7997;
+	border-color: #0f7997;
 }
 .btn-outline-primary:hover {
-	background-color: #FF5B37;
-	border-color: #FF5B37;
+	background-color: #0f7997;
+	border-color: #0f7997;
 }
 .btn-outline-primary:focus,
 .btn-outline-primary.focus {
@@ -841,14 +841,14 @@ button.bg-danger:hover {
 }
 .btn-outline-primary.disabled,
 .btn-outline-primary:disabled {
-	color: #FF5B37;
+	color: #0f7997;
 	background-color: transparent;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active,
 .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-primary.dropdown-toggle {
-	background-color: #FF5B37;
-	border-color: #FF5B37;
+	background-color: #0f7997;
+	border-color: #0f7997;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus,
 .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
@@ -985,22 +985,22 @@ button.bg-danger:hover {
 .pagination > .active > span,
 .pagination > .active > span:focus,
 .pagination > .active > span:hover {
-	background-color: #FF5B37;
-	border-color: #FF5B37;
+	background-color: #0f7997;
+	border-color: #0f7997;
 }
 .pagination > li > a,
 .pagination > li > span {
-	color: #FF5B37;
+	color: #0f7997;
 }
 .page-link:hover {
-	color: #FF5B37;
+	color: #0f7997;
 }
 .page-link:focus {
 	box-shadow: unset;
 }
 .page-item.active .page-link {
-	background-color: #FF5B37;
-	border-color: #FF5B37;
+	background-color: #0f7997;
+	border-color: #0f7997;
 }
 .dropdown-menu {
 	border: 1px solid #eff2f7;
@@ -1070,11 +1070,11 @@ button.bg-danger:hover {
 }
 .bootstrap-datetimepicker-widget table td.active,
 .bootstrap-datetimepicker-widget table td.active:hover {
-	background-color: #FF5B37;
+	background-color: #0f7997;
 	text-shadow: unset;
 }
 .bootstrap-datetimepicker-widget table td.today:before {
-	border-bottom-color: #FF5B37;
+	border-bottom-color: #0f7997;
 }
 .bg-info-light {
 	background-color: rgba(2, 182, 179, 0.12) !important;
@@ -1216,9 +1216,9 @@ button.bg-danger:hover {
     padding: 30px;
 }
 .custom-modal .close {
-    background-color: #FF5B37;
+    background-color: #0f7997;
     border-radius: 50%;
-    border: 2px solid #FF5B37;
+    border: 2px solid #0f7997;
     color: #fff;
     font-size: 18px;
     height: 26px;
@@ -1239,8 +1239,8 @@ button.bg-danger:hover {
 }
 .custom-modal .close:hover {
 	background-color: #fff;
-    border: 2px solid #FF5B37;
-    color: #FF5B37;
+    border: 2px solid #0f7997;
+    color: #0f7997;
 }
 .custom-modal .close span {
 	top: -4px;
@@ -1255,7 +1255,7 @@ button.bg-danger:hover {
 	position: absolute;
 	left: -20px;
 	top: -20px;
-	background-color: #FF5B37;
+	background-color: #0f7997;
 	width: 100px;
 	height: 100px;
 	border-radius: 100px;
@@ -1379,7 +1379,7 @@ button.bg-danger:hover {
 	line-height: 46px;
 }
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
-	background-color: #FF5B37;
+	background-color: #0f7997;
 }
 .select2-container--default .select2-selection--multiple {
 	border: 1px solid #ddd;
@@ -1421,8 +1421,8 @@ button.bg-danger:hover {
 .nav-tabs.nav-tabs-solid > .active > a,
 .nav-tabs.nav-tabs-solid > .active > a:hover,
 .nav-tabs.nav-tabs-solid > .active > a:focus {
-	background-color: #FF5B37;
-	border-color: #FF5B37;
+	background-color: #0f7997;
+	border-color: #0f7997;
 	color: #fff;
 }
 .tab-content {
@@ -1455,8 +1455,8 @@ button.bg-danger:hover {
 .nav-tabs.nav-tabs-solid > li > a.active,
 .nav-tabs.nav-tabs-solid > li > a.active:hover,
 .nav-tabs.nav-tabs-solid > li > a.active:focus {
-	background-color: #FF5B37;
-	border-color: #FF5B37;
+	background-color: #0f7997;
+	border-color: #0f7997;
 	color: #fff;
 	padding: 10px 30px;
 }
@@ -1509,7 +1509,7 @@ button.bg-danger:hover {
 .nav-tabs.nav-tabs-top > li > a.active,
 .nav-tabs.nav-tabs-top > li > a.active:hover,
 .nav-tabs.nav-tabs-top > li > a.active:focus {
-	border-top-color: #FF5B37;
+	border-top-color: #0f7997;
 }
 .nav-tabs.nav-tabs-bottom > li {
 	margin-bottom: -1px;
@@ -1519,7 +1519,7 @@ button.bg-danger:hover {
 .nav-tabs.nav-tabs-bottom > li > a.active:focus {
 	border-bottom-width: 2px;
 	border-color: transparent;
-	border-bottom-color: #FF5B37;
+	border-bottom-color: #0f7997;
 	background-color: transparent;
 	transition: none 0s ease 0s;
 	-moz-transition: none 0s ease 0s;
@@ -1565,7 +1565,7 @@ button.bg-danger:hover {
 	color: #333;
 }
 .line {
-	background-color: #FF5B37;
+	background-color: #0f7997;
 	height: 2px;
 	margin: 0;
 	width: 60px;
@@ -1620,7 +1620,7 @@ button.bg-danger:hover {
 .avatar-title {
 	width: 100%;
 	height: 100%;
-	background-color: #FF5B37;
+	background-color: #0f7997;
 	color: #fff;
 	display: flex;
 	align-items: center;
@@ -1785,9 +1785,9 @@ button.bg-danger:hover {
     background: transparent;
 }
 .close {
-	background-color: #FF5B37;
+	background-color: #0f7997;
     border-radius: 50%;
-    border: 2px solid #FF5B37;
+    border: 2px solid #0f7997;
     color: #fff;
     font-size: 18px;
     font-weight: 700;
@@ -1809,8 +1809,8 @@ button.bg-danger:hover {
 }
 .close:hover {
 	background: #fff;
-	color: #FF5B37;
-	border: 2px solid #FF5B37;
+	color: #0f7997;
+	border: 2px solid #0f7997;
 }
 
 /*-----------------
@@ -1839,7 +1839,7 @@ button.bg-danger:hover {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	background: #FFF8F7;
+	background: #21a8ce12;
 }
 .header .header-left .logo {
 	display: inline-block;
@@ -1933,12 +1933,12 @@ button.bg-danger:hover {
 	padding: 10px 15px;
 }
 .user-menu .dropdown-menu .dropdown-item:hover {
-	color: #FF5B37;
+	color: #0f7997;
 	background-color: transparent;
 }
 .header .dropdown-menu > li > a:focus,
 .header .dropdown-menu > li > a:hover {
-	background-color: #FF5B37;
+	background-color: #0f7997;
 	color: #fff;
 }
 .header .dropdown-menu > li > a:focus i,
@@ -1949,13 +1949,13 @@ button.bg-danger:hover {
 	padding: 10px 18px;
 }
 .header .dropdown-menu > li > a i {
-	color: #FF5B37;
+	color: #0f7997;
 	margin-left: 10px;
 	text-align: center;
 	width: 18px;
 }
 .header .user-menu .dropdown-menu > li > a i {
-	color: #FF5B37;
+	color: #0f7997;
 	font-size: 16px;
 	margin-left: 10px;
 	min-width: 18px;
@@ -1973,7 +1973,7 @@ button.bg-danger:hover {
 	margin-right: 0;
 }
 .menu-title {
-	color: #FF5B37;
+	color: #0f7997;
 	display: block;
 	font-size: 14px;
 	font-weight: 600;
@@ -2354,8 +2354,8 @@ html.menu-opened body {
     color: #9f9f9f;
 }
 .chat-window .chat-cont-right .chat-footer .input-group .input-group-append .btn.msg-send-btn {
-    background-color: #FF5B37;
-    border-color: #FF5B37;
+    background-color: #0f7997;
+    border-color: #0f7997;
     border-radius: 50%;
     color: #fff;
     margin-left: 10px;
@@ -2659,7 +2659,7 @@ html.menu-opened body {
 -----------------------*/
 
 .sidebar {
-	background-color: #FFF8F7; 
+	background-color: #21a8ce12; 
 	bottom: 0;
 	right: 0;
 	margin-top: 0;
@@ -2698,21 +2698,21 @@ html.menu-opened body {
 	padding: 10px 15px;
 }
 .sidebar-menu li a:hover {
-	color: #FF5B37;
+	color: #0f7997;
 }
 .sidebar-menu > ul > li > a:hover {
 	background-color: rgba(118, 56, 255, 0.05);
-    color: #FF5B37; 
+    color: #0f7997; 
 }
 .sidebar-menu li.active > a {
-    color: #FF5B37;
+    color: #0f7997;
     position: relative;
     background: #FFFFFF;
     box-shadow: 0px 4px 4px rgb(0 0 0 / 6%);
     border-radius: 5px;
 }
 .menu-title {
-	color: #FF5B37;
+	color: #0f7997;
 	display: flex;
 	font-size: 14px;
 	opacity: 1;
@@ -2738,7 +2738,7 @@ html.menu-opened body {
 	padding: 10px 15px;
 }
 .sidebar-menu ul ul a.active {
-    color: #FF5B37;
+    color: #0f7997;
 }
 .mobile_btn {
 	display: none;
@@ -2938,7 +2938,7 @@ html.menu-opened body {
 .fc-state-down,
 .fc-state-active,
 .fc-state-disabled {
-	background-color: #FF5B37 !important;
+	background-color: #0f7997 !important;
 	color: #fff !important;
 	text-shadow: none !important;
 }
@@ -3012,7 +3012,7 @@ html.menu-opened body {
 	padding: 10px;
 }
 .mail-list > li.active > a {
-	color: #FF5B37;
+	color: #0f7997;
 	font-weight: bold;
 }
 .unread .name,
@@ -3209,7 +3209,7 @@ table.table-inbox tbody tr.checked {
     width: 100%;
 }
 .error-box h1 {
-    color: #FF5B37;
+    color: #0f7997;
     font-size: 10em;
 }
 .error-box p {
@@ -3285,7 +3285,7 @@ table.table-inbox tbody tr.checked {
     justify-content: center;
     align-items: center;
     color: #fff;
-    background: #FF5B37;
+    background: #0f7997;
     border: 1px solid #ff431a;
     border-radius: 5px;
 }
@@ -3364,7 +3364,7 @@ table.table-inbox tbody tr.checked {
 .form-focus .form-control {
 	height: 50px;
 	padding: 21px 12px 6px;	
-	border: 1px solid #FFE6E1;
+	border: 1px solid #0f7997;
 }
 .form-focus .form-control::-webkit-input-placeholder {
 	color: transparent;
@@ -3620,7 +3620,7 @@ table.table-inbox tbody tr.checked {
     margin-bottom: 10px;
 }
 .forgot-link:hover {
-	color: #ff5b37;
+	color: #0f7997;
 }
 .login-right .dont-have {
     color: #131135;
@@ -3684,7 +3684,7 @@ table.table-inbox tbody tr.checked {
     display: none;
     right: 4px;
     top: 0;
-    color: #FF5B37;
+    color: #0f7997;
     font-size: 11px;
 }
 .custom_check input:checked ~ .checkmark:after {
@@ -3721,7 +3721,7 @@ table.table-inbox tbody tr.checked {
 	height: 20px;
 	width: 20px;
 	background-color: #fff;
-	border: 1px solid #FF5B37;
+	border: 1px solid #0f7997;
 	border-radius: 50%
 }
 .custom_radio .checkmark:after {
@@ -3734,7 +3734,7 @@ table.table-inbox tbody tr.checked {
 	width: 12px;
 	height: 12px;
 	border-radius: 50%;
-	background: #FF5B37;
+	background: #0f7997;
 	-moz-transition: all 0.3s ease-in-out;
 	-o-transition: all 0.3s ease-in-out;
 	-webkit-transition: all 0.3s ease-in-out;
@@ -3756,15 +3756,15 @@ table.table-inbox tbody tr.checked {
     content: "Upload";
 }
 .user-tabs  .nav-pills .nav-link {
-	background: #FF5B37;
+	background: #0f7997;
 	border-radius: 3px;
 	color: #fff;
-	border: 1px solid #FF5B37;
+	border: 1px solid #0f7997;
 }
 .user-tabs  .nav-pills .nav-link.active, .user-tabs  .nav-pills .show>.nav-link {
-    color: #FF5B37;
+    color: #0f7997;
     background-color: #fff;
-	border: 1px solid #FF5B37;
+	border: 1px solid #0f7997;
 }
 .login-foot .login-forgot {
 	text-align: left;
@@ -3961,7 +3961,7 @@ table.table-inbox tbody tr.checked {
 	width: 12px;
 	height: 12px;
 	border-radius: 50%;
-	background-color: #FF5B37;
+	background-color: #0f7997;
 }
 .activity-feed .feed-item .feed-date {
 	display: block;
@@ -4006,17 +4006,17 @@ table.table-inbox tbody tr.checked {
 .wizard-icon {
 	padding: 40px;
 	border-radius: 50%;
-	background: #FFB8A8;
+	background: #21a8ce1f;
 	position: absolute; 
 	bottom: -27px;
 	left: -27px;
 	font-size: 60px;
-	color: #FF5B37;
+	color: #0f7997;
 }
 .dash-widget-icon {
 	align-items: center;
     border-radius: 50%;
-    color: #FF5B37;
+    color: #0f7997;
     display: inline-flex;
     font-size: 2rem;
     height: 5rem;
@@ -4031,7 +4031,7 @@ table.table-inbox tbody tr.checked {
 .welcome-dash-icon {
 	align-items: center;
 	border-radius: 50%;
-	color: #FF5B37;
+	color: #0f7997;
 	display: inline-flex;
 	font-size: 2rem;
 	height: 4rem;
@@ -4049,10 +4049,10 @@ table.table-inbox tbody tr.checked {
 	width: 100%;
 }
 .apexcharts-canvas .apexcharts-zoom-icon.apexcharts-selected svg, .apexcharts-canvas .apexcharts-selection-icon.apexcharts-selected svg, .apexcharts-canvas .apexcharts-reset-zoom-icon.apexcharts-selected svg {
-    fill: #ff5b37 !important;
+    fill: #0f7997 !important;
 }
 .apexcharts-pan-icon.apexcharts-selected svg {
-    stroke: #ff5b37 !important;
+    stroke: #0f7997 !important;
 }
 .account-balance {
 	border-bottom: 1px solid #E4E4E4;
@@ -4188,10 +4188,10 @@ table.table-inbox tbody tr.checked {
 .settings-menu ul li a:hover, .settings-menu ul li a:focus {
 	background-color: transparent !important;
 	border: 0 !important;
-	color: #FF5B37;
+	color: #0f7997;
 }
 .settings-menu ul li a.active {
-	color: #FF5B37 !important;
+	color: #0f7997 !important;
 	border: 0;
 }
 .settings-menu ul li i {
@@ -4205,7 +4205,7 @@ table.table-inbox tbody tr.checked {
 }
 .nav-tabs.menu-tabs .nav-item.active .nav-link {
 	color: #fff;
-	background: #FF5B37;
+	background: #0f7997;
 }
 .nav-tabs.menu-tabs .nav-item {
 	padding-left: 10px;
@@ -4229,7 +4229,7 @@ table.table-inbox tbody tr.checked {
 }
 .nav-tabs.menu-tabs .nav-link:hover {
 	color: #fff;
-	background: #FF5B37;
+	background: #0f7997;
 }
 .nav-tabs.menu-tabs .nav-link:focus {
 	color: #fff;
@@ -4318,7 +4318,7 @@ table.table-inbox tbody tr.checked {
 .settings-btn .upload {
     position: absolute;
     z-index: 11;
-    background: #FF5B37;
+    background: #0f7997;
     border-radius: 5px;
     left: 2px;
     top: 1.5px;
@@ -4429,8 +4429,8 @@ table.table-inbox tbody tr.checked {
 	transition: right 300ms ease, transform 300ms ease;
 }
 .check:checked + .checktoggle {
-    background-color: #ff5b37;
-    border: 1px solid #ff5b37;
+    background-color: #0f7997;
+    border: 1px solid #0f7997;
 }
 .check:checked + .checktoggle:after {
 	background-color: #fff;
@@ -4512,8 +4512,8 @@ table.table-inbox tbody tr.checked {
 	font-weight: 700;
 	padding: 10px 26px;
 	margin-left: 15px;
-	background: #FF5B37;
-	border: 1px solid #FF5B37;
+	background: #0f7997;
+	border: 1px solid #0f7997;
 	color: #fff;
 	border-radius: 4px;
 }
@@ -4581,8 +4581,8 @@ table.table-inbox tbody tr.checked {
     height: 50px;
     margin-left: 6px;
     color: #fff;
-    background: #FF5B37;
-    border: 1px solid #FF5B37;
+    background: #0f7997;
+    border: 1px solid #0f7997;
     border-radius: 5px;
     font-size: 24px;
     display: flex;
@@ -4625,7 +4625,7 @@ table.table-inbox tbody tr.checked {
 	opacity: 0.8;
 }
 .bg-pink {
-    background-color: #fff8f7;
+    background-color: #21a8ce12;
     border: 1px solid #f6d1cb;
 }
 .bg-pink:hover {
@@ -4683,7 +4683,7 @@ table.table-inbox tbody tr.checked {
 	transition: .3s
 }
 .toggle-switch-input:checked + .toggle-switch-label {
-	background-color: #FF5B37;
+	background-color: #0f7997;
 }
 .toggle-switch-input:checked+.toggle-switch-label .toggle-switch-indicator {
 	-webkit-transform: translate3d(1.025rem, 50%, 0);
@@ -4901,7 +4901,7 @@ table.table-inbox tbody tr.checked {
 		padding: 0 0px;
 	}
 	#toggle_btn:hover {
-		color: #FF5B37;
+		color: #0f7997;
 	}
 	.mini-sidebar .header-left .logo img {
 		height: auto;
